chapter5/5-2-1_loadbalancer.yaml
kind: Service
apiVersion: v1
metadata:
  name: echoserver
spec:
  type: LoadBalancer
  selector:
    project: chapter5
    service: echoserver
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
