chapter5/5-3-1_np_denyall.yaml
# default-deny all ingress traffics
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
